refactor: Restructure info-section and cta-section HTML for easier styling

--- a/index.html
+++ b/index.html
@@ -29,23 +29,29 @@
         </section>
 
         <section class="info-section">
-                <h2>Core Mechanics</h2>
+            <h2>Core Mechanics</h2>
+            <div class="cards-container">
+                <div class="info-card">
+                    <div class="card-image-placeholder"></div>
                     <h3>Master the Fundamentals</h3>
-                    <p>Utilize a unique control scheme to execute takedowns, passes,
-                and submissions. Manage your stamina and outmaneuver your
-                opponent in a high-stakes battle of wits.</p>
+                    <p>Utilize a unique control scheme to execute takedowns, passes, and submissions. Manage your stamina and outmaneuver your opponent in a high-stakes battle of wits.</p>
+                </div>
+                <div class="info-card">
+                    <div class="card-image-placeholder"></div>
                     <h3>The Path to Victory</h3>
-                    <p>Win by submitting your opponent or by scoring the most points
-                for dominant positions. Illegal moves will result in
-                penalties, so fight with honor... or don't.</p>
+                    <p>Win by submitting your opponent or by scoring the most points for dominant positions. Illegal moves will result in penalties, so fight with honor... or don't.</p>
+                </div>
+                <div class="info-card">
+                    <div class="card-image-placeholder"></div>
                     <h3>Choose Your Grappler</h3>
-                    <p>Select from a roster of unique fighters, each with their own
-                special moves and grappling styles. Will you be a pressure
-                passer, a leg-lock specialist, or a submission artist?</p>
+                    <p>Select from a roster of unique fighters, each with their own special moves and grappling styles. Will you be a pressure passer, a leg-lock specialist, or a submission artist?</p>
+                </div>
+                <div class="info-card">
+                    <div class="card-image-placeholder"></div>
                     <h3>Global Combat</h3>
-                    <p>Compete in a variety of futuristic arenas from around the
-                world, each with its own dynamic lighting and electrifying
-                atmosphere.</p>
+                    <p>Compete in a variety of futuristic arenas from around the world, each with its own dynamic lighting and electrifying atmosphere.</p>
+                </div>
+            </div>
         </section>
 
         <section class="quote-section">
@@ -60,8 +66,12 @@
         </section>
 
         <section class="cta-section">
-            <h2>The Mat is Waiting</h2>
-            <button>Pre-Order Now</button>
+            <div class="cta-text">
+                <h2>The Mat is Waiting</h2>
+            </div>
+            <div class="cta-button">
+                <button>Pre-Order Now</button>
+            </div>
         </section>
     </main>
 
