feat(hero): replace image placeholder with actual image and update CSS styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p> ROLLACONDA is a 1v1 tactical grappling game.</p>
                 <button>Wishlist on Steam</button>
             </div>
-                <div class="image-placeholder">This is an image placeholder</div>
+                <img src="./images/RC1.png" alt="Fighters Roster">
         </section>
 
         <section class="info-section">
